--- a/.github/workflows/arduino_lint.yml
+++ b/.github/workflows/arduino_lint.yml
@@ -1,12 +1,12 @@
 # yamllint disable rule:line-length
 ---
-name: Arduino Lint
+name: Lint
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 
 jobs:
-  arduino-lint:
+  arduino:
     runs-on: ubuntu-latest
     container:
       image: dtors/base-cpp:latest
