--- a/.github/workflows/bazel_test.yml
+++ b/.github/workflows/bazel_test.yml
@@ -1,12 +1,12 @@
 # yamllint disable rule:line-length
 ---
-name: Bazel Test
+name: Bazel
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 
 jobs:
-  bazel_test:
+  test:
     runs-on: ubuntu-latest
     container:
       image: dtors/base-cpp:latest
