--- a/.github/workflows/check_pr_description.yml
+++ b/.github/workflows/check_pr_description.yml
@@ -1,12 +1,12 @@
 # yamllint disable rule:line-length
 ---
-name: PR description
+name: Lint
 on:  # yamllint disable-line rule:truthy
   pull_request:
     types: [opened, edited, synchronize]
 
 jobs:
-  check-description:
+  pr-description:
     runs-on: ubuntu-latest
 
     steps:
