--- a/.github/workflows/clang_format.yml
+++ b/.github/workflows/clang_format.yml
@@ -1,12 +1,12 @@
 # yamllint disable rule:line-length
 ---
-name: Clang-Format
+name: Clang
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 
 jobs:
-  clang-format:
+  format:
     runs-on: ubuntu-latest
     container:
       image: dtors/base-cpp:latest
