--- a/.github/workflows/clang_tidy.yml
+++ b/.github/workflows/clang_tidy.yml
@@ -1,12 +1,12 @@
 # yamllint disable rule:line-length
 ---
-name: Clang-Tidy
+name: Clang
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 
 jobs:
-  clang-tidy:
+  tidy:
     runs-on: ubuntu-latest
     container:
       image: dtors/base-cpp:latest
