--- a/.github/workflows/llvm_cov.yml
+++ b/.github/workflows/llvm_cov.yml
@@ -1,12 +1,12 @@
 # yamllint disable rule:line-length
 ---
-name: Run llvm-cov
+name: Coverage
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 
 jobs:
-  coverage:
+  llvm-cov:
     runs-on: ubuntu-latest
     container:
       image: dtors/base-cpp:latest
