--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -1,12 +1,12 @@
 # yamllint disable rule:line-length
 ---
-name: Lint YAML files
+name: Lint
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 
 jobs:
-  yamllint:
+  yaml:
     runs-on: ubuntu-latest
     container:
       image: dtors/base-cpp:latest
