ci: dont run actions on deleted files
--diff-filter=ACM:
A: Added files.
C: Copied files (if applicable).
M: Modified files. This excludes deleted (D) files.

--- a/.github/workflows/arduino_lint.yml
+++ b/.github/workflows/arduino_lint.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Find affected files
         run: |
           git fetch origin ${{ github.base_ref }} --depth=1
-          git diff --name-only origin/${{ github.base_ref }} > affected_files.txt
+          git diff --diff-filter=ACM --name-only origin/${{ github.base_ref }} > affected_files.txt
           echo "Affected files:"
           cat affected_files.txt
 
