--- a/.github/workflows/bazel_buildifier.yml
+++ b/.github/workflows/bazel_buildifier.yml
@@ -39,7 +39,8 @@ jobs:
           sort -u affected_bazel_files.txt -o affected_bazel_files.txt
           echo "Affected Bazel files:"
           cat affected_bazel_files.txt
-          echo "bazel_files=$(cat affected_bazel_files.txt | tr '\n' ' ')" >> $GITHUB_ENV
+
+          echo "bazel_files=$(cat affected_bazel_files.txt | tr -s '\n' ' ' | sed 's/^[ \t]*//;s/[ \t]*$//')" >> $GITHUB_ENV
         shell: bash
 
       - name: Setup bazel cache
@@ -59,7 +60,8 @@ jobs:
         if: env.bazel_files != ''
         run: |-
           echo "Running buildifier check on: $bazel_files"
-          bazelisk run //bazel:buildifier_check -- ${bazel_files}
+          bazelisk run //bazel:buildifier_check -- $bazel_files
+        shell: bash
 
       - name: No Bazel files affected
         if: env.bazel_files == ''
