--- a/.github/workflows/bazel_test.yml
+++ b/.github/workflows/bazel_test.yml
@@ -35,7 +35,7 @@ jobs:
           while read file; do
             if [[ "$file" == *.c || "$file" == *.cc || "$file" == *.cpp || "$file" == *.cxx || "$file" == *.h || "$file" == *.hpp || "$file" == *.hxx ]]; then
               echo "Finding targets for: $file"
-              targets=$(bazelisk query --output=package "$file" || true)/...
+              targets=$(bazelisk query --output=package "$file")/...
               echo "$targets" >> affected_targets.txt
             fi
           done < affected_files.txt
@@ -44,11 +44,29 @@ jobs:
           echo "Affected targets:"
           cat affected_targets.txt
 
-          echo "targets=$(cat affected_targets.txt | tr '\n' ' ')" >> $GITHUB_ENV
+          echo "targets=$(cat affected_targets.txt | tr -s '\n' ' ' | sed 's/^[ \t]*//;s/[ \t]*$//')" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Find affected Bazel test targets
+        id: bazel_test_targets
+        run: |
+          > affected_test_targets.txt
+
+          while read target; do
+            echo "Finding test targets for: $target"
+            test_targets=$(bazelisk query "kind('cc_test', '$target')")
+            echo "$test_targets" >> affected_test_targets.txt
+          done < affected_targets.txt
+
+          sort -u affected_test_targets.txt -o affected_test_targets.txt
+          echo "Affected test targets:"
+          cat affected_test_targets.txt
+
+          echo "test_targets=$(cat affected_test_targets.txt | tr -s '\n' ' ' | sed 's/^[ \t]*//;s/[ \t]*$//')" >> $GITHUB_ENV
         shell: bash
 
       - name: Setup bazel cache
-        if: env.targets != ''
+        if: ${{ env.test_targets && env.test_targets != '' }}
         uses: actions/cache@v4
         env:
           cache-name: bazel-cache
@@ -61,11 +79,12 @@ jobs:
             ${{ runner.os }}-${{ env.cache-name }}-development
 
       - name: Test affected targets
-        if: env.targets != ''
+        if: ${{ env.test_targets && env.test_targets != '' }}
         run: |
-          echo "Building targets: $targets"
-          bazelisk test ${targets}
+          echo "Running test targets: $test_targets"
+          bazelisk test $test_targets
+        shell: bash
 
       - name: No targets to test
-        if: env.targets == ''
-        run: echo "No affected Bazel targets found. Skipping test."
+        if: ${{ env.targets == '' || env.test_targets == '' }}
+        run: echo "No affected Bazel test targets found. Skipping test."
