--- a/instrument-cluster/BUILD
+++ b/instrument-cluster/BUILD
@@ -1,36 +1,49 @@
-load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")
-
 genrule(
     name = "process_ui",
     srcs = ["basicdisplay.ui"],
     outs = ["ui_basicdisplay.h"],
-    cmd = "/usr/lib/qt6/libexec/uic $< -o $@",
+    cmd = "/usr/bin/uic $(SRCS) -o $(OUTS)",
     visibility = ["//visibility:public"],
 )
 
-# Define a biblioteca Qt
-qt_cc_library(
-    name = "lib",
-    srcs = ["basicdisplay.cpp", "speed.cpp", "rpm.cpp", "zmqpublisher.cpp", "zmqsubscriber.cpp"],
+cc_library(
+    name = "instrument_cluster_lib",  
+    srcs = [
+        "basicdisplay.cpp",
+        "speed.cpp",
+        "rpm.cpp",
+        "zmqpublisher.cpp",
+        "zmqsubscriber.cpp",
+    ],
     hdrs = [
         "basicdisplay.h",
-        "ui_basicdisplay.h",
+        "ui_basicdisplay.h",  
         "speed.h",
         "rpm.h",
         "zmqpublisher.h",
-        "zmqsubscriber.h"
+        "zmqsubscriber.h",
     ],
-    deps = [
-        "@rules_qt//:qt_core",
-        "@rules_qt//:qt_widgets",
-    ],
+    deps = [":process_ui"],
+    copts = [
+        "-I.",  
+        "-Ibazel-out/k8-fastbuild/bin",  
+        "-Ibazel-out/k8-fastbuild/bin/instrument-cluster",
+        "-I/usr/include/x86_64-linux-gnu/qt5",
+        "-I/usr/include/x86_64-linux-gnu/qt5/QtGui",
+        "-I/usr/include/x86_64-linux-gnu/qt5/QtWidgets",
+        "-I/usr/include/x86_64-linux-gnu/qt5/QtCore",
+    ]
 )
 
-
-qt_cc_binary(
+cc_binary(
     name = "bin",
     srcs = ["main.cpp"],
     deps = [
-        ":lib",
+        ":instrument_cluster_lib",
+    ],
+    linkopts = [
+        "-lQt5Widgets",
+        "-lQt5Core",
+        "-lQt5Gui",
     ],
 )
