gui: add test BUILD and code improve code readability

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ genhtml/
 
 # Ignore compile commands
 compile_commands.json
+
+#Ignore qtcreator generated files
+*.pro.user*
+CMakeLists.txt.user*
