--- a/.github/workflows/clang_tidy.yml
+++ b/.github/workflows/clang_tidy.yml
@@ -43,6 +43,50 @@ jobs:
           echo "cpp_files=$(cat affected_cpp_files.txt | tr -s '\n' ' ' | sed 's/^[ \t]*//;s/[ \t]*$//')" >> $GITHUB_ENV
         shell: bash
 
+      - name: Find affected Bazel targets
+        id: bazel_targets
+        run: |
+          > affected_targets.txt
+
+          while read file; do
+            if [[ "$file" == *.c || "$file" == *.cc || "$file" == *.cpp || "$file" == *.cxx || "$file" == *.h || "$file" == *.hpp || "$file" == *.hxx ]]; then
+              echo "Finding targets for: $file"
+              targets=$(bazelisk query --output=package "$file")/...
+              echo "$targets" >> affected_targets.txt
+            fi
+          done < affected_files.txt
+
+          sort -u affected_targets.txt -o affected_targets.txt
+          echo "Affected targets:"
+          cat affected_targets.txt
+
+          echo "targets=$(cat affected_targets.txt | tr -s '\n' ' ' | sed 's/^[ \t]*//;s/[ \t]*$//')" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Setup bazel cache
+        if: env.targets != ''
+        uses: actions/cache@v4
+        env:
+          cache-name: bazel-cache
+        with:
+          path: |
+            ~/.cache/bazelisk
+            ~/.cache/bazel
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ github.ref }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-development
+
+      - name: Build affected targets
+        if: env.targets != ''
+        run: |
+          echo "Building targets: $targets"
+          bazelisk build $targets
+        shell: bash
+
+      - name: No targets to build
+        if: env.targets == ''
+        run: echo "No affected Bazel targets found. Skipping build."
+
       - name: Generate Compile Commands
         if: env.cpp_files != ''
         run: |
