--- a/.github/workflows/bazel_build_aarch64.yml
+++ b/.github/workflows/bazel_build_aarch64.yml
@@ -9,7 +9,7 @@ jobs:
   build_aarch64:
     runs-on: ubuntu-latest
     container:
-      image: dtors/base-cpp:latest
+      image: t4seame/app:latest
 
     steps:
       - name: Checkout code
