--- a/.github/workflows/bazel_build_x86.yml
+++ b/.github/workflows/bazel_build_x86.yml
@@ -9,7 +9,7 @@ jobs:
   build_x86:
     runs-on: ubuntu-latest
     container:
-      image: dtors/base-cpp:latest
+      image: t4seame/app:latest
 
     steps:
       - name: Checkout code
