--- a/.github/workflows/gitlint.yml
+++ b/.github/workflows/gitlint.yml
@@ -8,7 +8,7 @@ jobs:
   gitlint:
     runs-on: ubuntu-latest
     container:
-      image: dtors/base-cpp:latest
+      image: t4seame/app:latest
 
     steps:
       - name: Checkout code
