--- a/.github/workflows/bazel_build_aarch64.yml
+++ b/.github/workflows/bazel_build_aarch64.yml
@@ -27,8 +27,25 @@ jobs:
           echo "Affected files:"
           cat affected_files.txt
 
+      - name: Find affected Bazel files
+        run: |
+          > affected_bazel_files.txt
+
+          while read file; do
+            if [[ "$file" == *BUILD || "$file" == *WORKSPACE || "$file" == *MODULE.bazel || "$file" == *.bazelrc ]]; then
+              echo "$file" >> affected_bazel_files.txt
+            fi
+          done < affected_files.txt
+
+          sort -u affected_bazel_files.txt -o affected_bazel_files.txt
+          echo "Affected Bazel files:"
+          cat affected_bazel_files.txt
+
+          echo "bazel_files=$(cat affected_bazel_files.txt | tr -s '\n' ' ' | sed 's/^[ \t]*//;s/[ \t]*$//')" >> $GITHUB_ENV
+        shell: bash
+
       - name: Find affected Bazel targets
-        id: bazel_targets
+        if: ${{ env.bazel_files == '' }}
         run: |
           > affected_targets.txt
 
@@ -61,12 +78,14 @@ jobs:
             ${{ runner.os }}-${{ env.cache-name }}-development
 
       - name: Build affected targets
-        if: env.targets != ''
         run: |
-          echo "Building targets for aarch64: $targets"
-          bazelisk build $targets --platforms=//bazel/platforms:aarch64_linux
+          if [ -n "$BAZEL_FILES" ]; then
+            echo "Building all targets for aarch64"
+            bazelisk build //... --platforms=//bazel/platforms:aarch64_linux
+          elif [ -n "$targets" ]; then
+            echo "Building targets for aarch64: $targets"
+            bazelisk build $targets --platforms=//bazel/platforms:aarch64_linux
+          else
+            echo "No targets to build"
+          fi
         shell: bash
-
-      - name: No targets to build
-        if: env.targets == ''
-        run: echo "No affected Bazel targets found. Skipping build."
