feat: better structure

--- a/com-middleware/BUILD
+++ b/com-middleware/BUILD
@@ -1,13 +1,14 @@
 cc_binary(
     name = "bin",
-    srcs = ["main.cpp"],
+    srcs = ["src/main.cpp"],
     features = ["warnings_critical_code_gcc"],
     linkopts = [
         "-lzmq",
     ],
     deps = [
-        "//com-middleware/can",
-        "//com-middleware/exceptions",
+        "//com-middleware/src/can",
+        "//com-middleware/src/exceptions",
+        "//com-middleware/src/mq",
         "@cppzmq",
     ],
 )
