--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
 				"xaver.clang-format",
 				"BazelBuild.vscode-bazel",
 				"llvm-vs-code-extensions.vscode-clangd",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"cschlosser.doxdocgen"
 			],
 			"settings": {
 				"remote.autoForwardPorts": false
