--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -30,6 +30,18 @@ jobs:
             fi
           done < affected_files.txt
 
+      - name: Setup docker cache
+        if: env.dockerfile_changed == 'true'
+        uses: actions/cache@v4
+        env:
+          cache-name: docker-cache
+        with:
+          path: |
+            ~/.cache/docker
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ github.ref }}
+          restore-keys: |
+            ${{ runner.os }}-${{ env.cache-name }}-developmen
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         if: env.dockerfile_changed == 'true'
