--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -1,12 +1,10 @@
 ---
 name: Docker
-
 on:  # yamllint disable-line rule:truthy
   push:
-    branches:
-      - main
-    paths:
-      - 'Dockerfile'
+    branches: ["main"]
+    paths: ["Dockerfile"]
+  workflow_dispatch:
 
 jobs:
   build_and_push:
