--- a/com-middleware/BUILD
+++ b/com-middleware/BUILD
@@ -1,3 +1,5 @@
+load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
+
 cc_binary(
     name = "bin",
     srcs = ["src/main.cpp"],
@@ -11,4 +13,18 @@ cc_binary(
         "//com-middleware/src/mq",
         "@cppzmq",
     ],
+)
+
+pkg_files(
+    name = "pkg_files",
+    srcs = [
+        ":bin",
+    ],
+    attributes = pkg_attributes(
+        group = "root",
+        mode = "0755",
+        owner = "root",
+    ),
+    strip_prefix = "/",
+    visibility = ["//:__pkg__"],
 )
