--- a/examples/baseCar/BUILD
+++ b/examples/baseCar/BUILD
@@ -1,6 +1,7 @@
 cc_binary(
     name = "baseCar",
     srcs = ["main.cpp"],
+    visibility = ["//examples:__pkg__"],
     deps = [
         "//platform/joystick",
     ],
