--- a/examples/qt/qml/BUILD
+++ b/examples/qt/qml/BUILD
@@ -10,6 +10,7 @@ qt_resource(
 qt_cc_binary(
     name = "bin",
     srcs = ["main.cpp"],
+    visibility = ["//examples:__pkg__"],
     deps = [
         ":qrc",
     ],
