--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
   create-release:
     name: Create Release
     runs-on: ubuntu-latest
+    container:
+      image: t4seame/app:latest
     permissions:
       contents: write
       pull-requests: write
@@ -18,7 +20,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Build Bazel
+        run: bazel build //:release_bins
+
       - name: Create Release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -29,3 +35,14 @@ jobs:
             - Commit: ${{ github.sha }}
           draft: false
           prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: bazel-out/k8-fastbuild/bin/release_bins.tar.gz
+          asset_name: release_bins.tar.gz
+          asset_content_type: application/gzip
