feat: added zeromq subscriber

--- a/instrument-cluster/BUILD
+++ b/instrument-cluster/BUILD
@@ -1,10 +1,21 @@
-load("//bazel/rules:qt.bzl", "qt_cc_binary", "qt_resource")
+load("//bazel/rules:qt.bzl", "qt_cc_binary", "qt_cc_library", "qt_resource")
 
 qt_resource(
     name = "qrc",
     files = [
         "Main.qml",
         "ScreenUI.qml",
+    ],
+)
+
+qt_cc_library(
+    name = "datamanager",
+    srcs = ["DataManager.cpp"],
+    hdrs = ["DataManager.hpp"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//instrument-cluster/mq",
+        "@cppzmq",
     ],
 )
 
@@ -17,6 +28,7 @@ qt_cc_binary(
         "-lzmq",
     ],
     deps = [
+        ":datamanager",
         ":qrc",
         "//instrument-cluster/mq",
     ],
