Improved UI of Instrument Cluster

--- a/instrument-cluster/BUILD
+++ b/instrument-cluster/BUILD
@@ -1,21 +1,12 @@
-load("//bazel/rules:qt.bzl", "qt_cc_binary", "qt_cc_library", "qt_resource")
+load("//bazel/rules:qt.bzl", "qt_cc_binary", "qt_resource")
 
 qt_resource(
     name = "qrc",
     files = [
         "Main.qml",
         "ScreenUI.qml",
-    ],
-)
-
-qt_cc_library(
-    name = "datamanager",
-    srcs = ["DataManager.cpp"],
-    hdrs = ["DataManager.hpp"],
-    visibility = ["//visibility:public"],
-    deps = [
-        "//instrument-cluster/mq",
-        "@cppzmq",
+        "fonts/HelveticaNeue.ttf",
+        "images/warning-light.png",
     ],
 )
 
@@ -28,8 +19,11 @@ qt_cc_binary(
         "-lzmq",
     ],
     deps = [
-        ":datamanager",
         ":qrc",
         "//instrument-cluster/mq",
+        "//instrument-cluster/qml/ClusterData:backend",
+        "//instrument-cluster/qml/Components:components",
+        "//instrument-cluster/qml/Constants:constants",
+        "//instrument-cluster/src",
     ],
 )
