--- a/.github/workflows/coverage_deploy.yml
+++ b/.github/workflows/coverage_deploy.yml
@@ -25,8 +25,22 @@ jobs:
       image: t4seame/app:latest
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for rebase
+
+      - name: Configure Git Safe Directory
+        run: |
+          git config --global --add safe.directory $(pwd)
+
+      - name: Fetch main branch
+        run: |
+          git fetch origin main
+
+      - name: Rebase PR branch onto main
+        run: |
+          git rebase origin/main || (git rebase --abort && exit 1)
 
       - name: Create coverage directory
         run: |
