--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,3 +1,5 @@
+"""Bazel build and test dependencies."""
+
 bazel_dep(name = "googletest", version = "1.15.2")
 bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
 bazel_dep(name = "rules_python", version = "1.1.0")
