controller: add lib to transform from image to world space
The lane detection computer vision model outputs pairs of
x, y coordinates in image space.
Different methods, such as the MPC, requires these pairs of
points to be in world space.
It's possible to transfrom from image to world space using the
camera's intrinsic and extrinsic parameters and assuming that
the points lie on a flat horizontal plane.

--- a/applications/controller/misc/BUILD
+++ b/applications/controller/misc/BUILD
@@ -13,3 +13,17 @@ py_library(
         requirement("scipy"),
     ],
 )
+
+py_library(
+    name = "coordinate_transformer_lib",
+    srcs = [
+        "__init__.py",
+        "coordinate_transformer.py",
+    ],
+    imports = ["."],
+    visibility = ["//applications/controller:__subpackages__"],
+    deps = [
+        requirement("numpy"),
+        ":utils_lib",
+    ],
+)
