car control: initial test of Jetson Raspberry communication

--- a/examples/baseCar/BUILD
+++ b/examples/baseCar/BUILD
@@ -1,8 +1,12 @@
 cc_binary(
     name = "baseCar",
     srcs = ["main.cpp"],
+    linkopts = [
+        "-lzmq",  # Add ZeroMQ library
+    ],
     visibility = ["//examples:__pkg__"],
     deps = [
         "//platform/joystick",
+        "//platform/remoteMove",
     ],
 )
