first test communication between jetson and raspberry

--- a/examples/baseCar/BUILD
+++ b/examples/baseCar/BUILD
@@ -4,5 +4,9 @@ cc_binary(
     visibility = ["//examples:__pkg__"],
     deps = [
         "//platform/joystick",
+        "//platform/remoteMove",
+    ],
+    linkopts = [
+        "-lzmq",  # Add ZeroMQ library
     ],
 )
