controller: add runner lib

--- a/applications/controller/BUILD
+++ b/applications/controller/BUILD
@@ -13,3 +13,19 @@ py_library(
         requirement("scipy"),
     ],
 )
+
+py_library(
+    name = "runner_lib",
+    srcs = [
+        "__init__.py",
+        "runner.py",
+    ],
+    imports = ["."],
+    visibility = ["//applications/controller:__subpackages__"],
+    deps = [
+        requirement("numpy"),
+        ":mpc_lib",
+        "//applications/controller/misc:coordinate_transformer_lib",
+        "//applications/controller/misc:utils_lib",
+    ],
+)
