applications: mv instrument-cluster to apps directory

--- a/applications/instrument-cluster/src/BUILD
+++ b/applications/instrument-cluster/src/BUILD
@@ -6,6 +6,6 @@ qt_cc_library(
     hdrs = glob(["*.hpp"]),
     visibility = ["//visibility:public"],
     deps = [
-        "//instrument-cluster/mq",
+        "//applications/instrument-cluster/mq",
     ],
 )
